2007-04-02  Tom Tromey  <tromey@redhat.com>

	https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=233406
	* gnu/java/net/natPlainSocketImplPosix.cc (create): Return if
	already created.
	* gnu/java/net/PlainSocketImpl.java (getLocalAddress): Handle case
	where localport is -1.
	(create): Now public.
	* gnu/java/nio/SocketChannelImpl.java (SocketChannelImpl): Call
	'create' on the socket.

2007-04-02  Andrew Haley  <aph@redhat.com>

	* java/lang/reflect/natVMProxy.cc (run_proxy): Use
	_Jv_LookupProxyMethod to find the Method.
	If parameter_types->length == 0, pass a null paramameter list,
	not a zero-length parameter list.
	* java/lang/natClass.cc (_Jv_LookupProxyMethod): New function.
	* java/lang/Class.h (_Jv_LookupProxyMethod): Declare.

2007-03-29  Tom Tromey  <tromey@redhat.com>

	PR libgcj/29869:
	* java/util/logging/LogManager.java (readConfiguration): Handle
	comma-separated 'handlers'.  Don't try to add a non-existing
	handler.

2007-03-07  Alexandre Oliva  <aoliva@redhat.com>

	* include/jvm.h (_Jv_ClosureListFinalizer): New.
	(_Jv_Linker::create_error_method): Adjust.
	* boehm.cc (_Jv_ClosureListFinalizer): New.
	* nogc.cc (_Jv_ClosureListFinalizer): New.
	* java/lang/Class.h (class _Jv_ClosureList): New.
	(class java::lang::Class): Declare it as friend.
	* java/lang/natClass.cc (_Jv_ClosureList::releaseClosures): New.
	(_Jv_ClosureList::registerClousure): New.
	* include/execution.h (_Jv_ExecutionEngine): Add get_closure_list.
	(_Jv_CompiledEngine::do_get_closure_list): New.
	(_Jv_CompiledEngine::_Jv_CompiledEngine): Use it.
	(_Jv_IndirectCompiledClass): Add closures.
	(_Jv_IndirectCompiledEngine::get_aux_info): New.
	(_Jv_IndirectCompiledEngine::do_allocate_field_initializers): Use
	it.
	(_Jv_IndirectCompiledEngine::do_get_closure_list): New.
	(_Jv_IndirectCompiledEngine::_Jv_IndirectCompiledEngine): Use it.
	(_Jv_InterpreterEngine::do_get_closure_list): Declare.
	(_Jv_InterpreterEngine::_Jv_InterpreterEngine): Use it.